2016-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Make estimate for preserved regs on function pointers less conservative.

2016-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  More accurate handling of conditional jumps, handle ex (sp), ix and ex (sp), iy.

2016-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Seems we have to worry about more than MSVC wrt. C99, patch #265 by Peter Dons Tychsen.

2016-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.h,
	  src/*/main.c,
	  src/z80/gen.c:
	  Implement declaration of preserved registers, RFE #483.
	* src/z80/peep.c
	  Handle preserved register information in peephole optimization.
	* device/include/stdlib.h,
	  device/include/string.h:
	  Preserved register information on standard functions.
	* doc/sdccman.lyx:
	  Document syntax for specifying preserved registers.

2016-01-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  More exact handling of ex, support for decimal shifts.

2016-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdebug.c:
	  Debug info for block-copy-initialized global variables, patch #262 by Peter Dons Tychsen.
	* src/SDCCdwarf2.c:
	  Fix handling of declared, but unused global vairables in debug output, patch #263 by Peter Dons Tychsen.
	* src/z80/peep.c:
	  More accurate handling of functions returning long long for peephole optimizer.
	* src/SDCCmain.c:
	  Fix stream for help output, patch #264 by Peter Dons Tychsen.

2016-01-18 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Apply a modified version of patch #261 by Peter Dons Tychsen.
	* support/regression/bug-2455.c
	  Improve test case.

2016-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Fix pointer dereference issue, patch #261 by Peter Dons Tychsen.

2016-01-17 Molnar Karoly <molnarkaroly AT users.sf.net>